recursion.logo.koch.Koch.scala.error
Compilation error:
Koch:12: error: reassignment to val
    if (levels=0) {
              ^Koch:16: error: not found: value snowside
      snowside(levels-1,length-1)
      ^